timelimit (1.8-2) UNRELEASED; urgency=medium

  * Bump Standards-Version to 3.9.6:
    - update the copyright file to copyright format 1.0
    - fix the copyright file information about upstream version 1.8
    - drop the DM-Upload-Allowed source control field

 -- Peter Pentchev <roam@ringlet.net>  Sat, 25 Oct 2014 13:50:17 +0300

timelimit (1.8-1) unstable; urgency=low

  * New upstream release
    - supports signal names now.  Closes: #621775
    - needs prove(1) for the test suite, so build-depend on perl
  * Update the copyright file to the latest DEP 5 candidate format.

 -- Peter Pentchev <roam@ringlet.net>  Wed, 13 Apr 2011 16:35:30 +0300

timelimit (1.7-4) unstable; urgency=low

  * After a discussion with George Danchev <danchev@debian.org> and
    Mats Erik Andersson (the maintainer of netpipes), make the binary
    package conflict versioned - the next upload of netpipes will not
    install a timelimit binary, so the conflict will be resolved.
    Thanks a lot to George Danchev and Mats Erik Andersson for
    the discussion and assistance!
  * Add a override for the "conflicts with version" Lintian informational
    message that the above change provokes.
  * Bump Standards-Version to 3.9.2 with no changes.
  * Update the copyright file to the latest DEP 5 candidate format.

 -- Peter Pentchev <roam@ringlet.net>  Mon, 11 Apr 2011 12:08:18 +0300

timelimit (1.7-3) unstable; urgency=low

  * Make the short description start with a lowercase letter.
  * Update the copyright file to the latest DEP 5 candidate format.
  * Upload to unstable.

 -- Peter Pentchev <roam@ringlet.net>  Tue, 01 Mar 2011 18:29:14 +0200

timelimit (1.7-2) experimental; urgency=low

  * Actually enable the build hardening by default (depend on a hardening
    package) and switch from the hardening-wrapper to hardening-includes.
  * Use := instead of = to optimize some shell invocations in the rules file.
  * Bump the year on my copyright notice.
