@@ -2,7 +2,7 @@ Source: timelimit
 Section: utils
 Priority: optional
 Maintainer: Peter Pentchev <roam@ringlet.net>
-Build-Depends: debhelper (>> 8), dpkg-dev (>= 1.15.7~), hardening-includes, perl
+Build-Depends: debhelper (>> 9), perl
 Standards-Version: 3.9.6
 Vcs-Git: git://gitorious.org/timelimit/pkg-debian.git
 Vcs-Browser: http://gitorious.org/timelimit/pkg-debian
