@@ -2,25 +2,18 @@
 # -*- makefile -*-
 # Debhelper build instructions for timelimit.
 
-CFLAGS:=	$(shell dpkg-buildflags --get CFLAGS)
-CPPFLAGS:=	$(shell dpkg-buildflags --get CPPFLAGS)
-LDFLAGS:=	$(shell dpkg-buildflags --get LDFLAGS)
+# Aim for the top, adapt if anything should break on the buildds.
+DEB_BUILD_MAINT_OPTIONS=	hardening=+all
+export DEB_BUILD_MAINT_OPTIONS
 
-CFLAGS+=	-pipe -Wall -W -ansi -pedantic -Wbad-function-cast \
+DEB_CFLAGS_MAINT_APPEND=	-pipe -Wall -W -ansi -pedantic -Wbad-function-cast \
 		-Wcast-align -Wcast-qual -Wchar-subscripts -Winline \
 		-Wmissing-prototypes -Wnested-externs -Wpointer-arith \
 		-Wredundant-decls -Wshadow -Wstrict-prototypes -Wwrite-strings
 ifneq (,$(filter werror,$(DEB_BUILD_OPTIONS)))
-	CFLAGS+=	-Werror
+DEB_CFLAGS_MAINT_APPEND+=	-Werror
 endif
-
-include /usr/share/hardening-includes/hardening.make
-ifeq (,$(filter nohardening,$(DEB_BUILD_OPTIONS)))
-CFLAGS+=	$(HARDENING_CFLAGS)
-LDFLAGS+=	$(HARDENING_LDFLAGS)
-endif
-
-export CFLAGS CPPFLAGS LDFLAGS
+export DEB_CFLAGS_MAINT_APPEND
 
 override_dh_auto_install:
 	dh_auto_install -- PREFIX=/usr MANDIR=/usr/share/man/man \
